--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amplifyapp",
   "version": "0.1.0",
-  "homepage": "https://shima-hito2.github.io/apmlifyapp/",
+  "homepage": "https://locakhost.jp",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
